fixed header on mobile

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -15,6 +15,11 @@
     text-transform: uppercase;
 }
 
+.header .logo img {
+    width: clamp(1.4375rem, 1.0194rem + 1.784vi, 2.625rem);
+    height: clamp(1.4375rem, 1.0194rem + 1.784vi, 2.625rem);
+}
+
 header {
     position: sticky;
     top: 0;
